# bevy_undo_redo

./: Cargo.toml  README.md  clippy.toml
src/: action.rs  error.rs  extensions.rs  history.rs  lib.rs  operation.rs  undoredo.rs
src/common_operations/: mod.rs  operation_group.rs
src/history/: iter.rs  mod.rs
