[package]
name = "bevy_undo_redo"
version = "0.1.0"
edition = "2021"
description = "An implementation of an undo/redo system for the Bevy Engine, inspired by Godot Engine's UndoRedo object."
repository = "https://github.com/LikeLakers2/bevy_undo_redo"
license = "MIT OR Apache-2.0"
keywords = ["bevy", "undo", "redo"]
categories = ["data-structures", "game-engines"]

[dependencies]
	[dependencies.bevy_app]
	version = "0.15"
	default-features = false
	
	[dependencies.bevy_ecs]
	version = "0.15"
	default-features = false
	
	[dependencies.bevy_reflect]
	version = "0.15"

[lints]
rust.dead_code = "forbid"
rust.missing_docs = "forbid"
clippy.allow_attributes = "forbid"
clippy.allow_attributes_without_reason = "forbid"
clippy.cargo_common_metadata = "forbid"
clippy.doc_markdown = "forbid"
clippy.empty_docs = "forbid"
clippy.missing_const_for_fn = "forbid"
clippy.missing_docs_in_private_items = "forbid"
clippy.missing_enforced_import_renames = "forbid"
clippy.missing_errors_docs = "forbid"
# `clippy::missing_panics_docs` is considered a forbidden lint. However, it has some false positives
# which trigger the lint unnecessarily. For an example, see `History::push()`'s code.
#
# All exceptions for `clippy::missing_panics_docs` must be marked as `#[expect()]`, and a reason
# must be given.
clippy.missing_panics_docs = "deny"
clippy.missing_safety_doc = "forbid"
# `clippy::module_name_repetitions` is considered a forbidden lint. However, it's unwanted for the
# purposes of iterators, which are usually in `iter.rs` but may contain more than one iterator.
#
# All exceptions for `clippy::module_name_repetitions` must be marked as `#[expect()]`, and a reason
# must be given.
clippy.module_name_repetitions = "deny"
clippy.multiple_crate_versions = "forbid"
clippy.must_use_candidate = "forbid"
clippy.semicolon_if_nothing_returned = "forbid"
clippy.semicolon_inside_block = "forbid"
clippy.std_instead_of_core = "forbid"
